# signal-event-loop

./: .gitignore  CMakeLists.txt  Changelog  Jenkinsfile  README.md  aevent-loop-include.pri  test-include.pri
compile/: 3288_debug.conf  3288_realese.conf  3326_release.conf  3328_release.conf  3399_release.conf  3568_debug.conf  3568_release.conf  arm64_android.conf  arm_android.conf  build.sh  common.cmake  cross_compile.cmake  prod-3288_android.conf  prod-3288_linux.conf  prod-3328_android.conf  prod-3328_linux.conf  prod-3399_android.conf  prod-3568_android.conf  prod-3568_linux.conf  prod-build.sh  x86.conf
core/: CMakeLists.txt  core-include.h  epoll-task-scheduler.cpp  epoll-task-scheduler.h  event-loop.cpp  event-loop.h  io-channel.cpp  io-channel.h  network-util.cpp  network-util.h  object.cpp  object.h  platform.h  select-task-scheduler.cpp  select-task-scheduler.h  task-pipe.cpp  task-pipe.h  task-scheduler.cpp  task-scheduler.h  thread-pool.cpp  thread-pool.h
examples/: CMakeLists.txt
examples/bluez-looptest/: CMakeLists.txt  bluez-looptest.pro  main.cpp
examples/bus_error_test/: CMakeLists.txt  main.cpp
examples/can-test/: 1.can  2.can  3.can  4.can  5.can  CMakeLists.txt  can-test.pro  enter.can  main.cpp  test.help
examples/commandlineTool/: CMakeLists.txt  commandline-tool.pro  main.cpp
examples/device-discover/: CMakeLists.txt  Makefile  device-discover.pro  main.cpp
examples/device_updater/: CMakeLists.txt  main.cpp
examples/dns-test/: CMakeLists.txt  dns-test.pro  main.cpp
examples/gatt/: CMakeLists.txt
examples/gatt-client/: CMakeLists.txt  btgatt-client.c
examples/gatt-test/: CMakeLists.txt
examples/gatt-test/Server/include/: WifiInfo.h  WifiUtil.h
examples/gatt-test/Server/src/: CMakeLists.txt  advertising.c  aimy_ble.c  gatt-service.c
examples/json_format/: CMakeLists.txt  main.cpp
examples/log-format-tool/: CMakeLists.txt  log-format-tool.pro  main.cpp
examples/logo-progress/: CMakeLists.txt  main.cpp  readMe.md
examples/object-test/: CMakeLists.txt  main.cpp  object-test.pro
examples/record-example/: CMakeLists.txt  main.cpp
examples/serial-test/: CMakeLists.txt  main.cpp
examples/tcp-test/: CMakeLists.txt  main.cpp
examples/test_language/: CMakeLists.txt  main.cpp
examples/test_language/test_go/: main.go
examples/uband_test/: CMakeLists.txt  main.cpp
examples/udp-test/: CMakeLists.txt  main.cpp  udp-test.pro
examples/uevent-monitor/: CMakeLists.txt  main.cpp
examples/virtual-device-test/: CMakeLists.txt  main.cpp
examples/virtual-device-test/VirtualDevice/: Bluetooth.h  Console.h  ConsoleMinikV0.h  Effector.h  Machine.h  MicrophoneU.h  Module5G8.h  PanelMusicBox.h  RemoteControl.h  types.h
examples/virtual-device-test/VirtualMachine/: gate_type.h  protocol.h  protocol_caller.h  protocol_tuner.h  types.h
examples/virtual-device-test/src/: Bluetooth.cpp  Console.cpp  ConsoleMinikV0.cpp  Effector.cpp  LocalSocket.cpp  LocalSocket.h  Machine.cpp  MicrophoneU.cpp  Module5G8.cpp  PanelMusicBox.cpp  RemoteControl.cpp  ServieUdpTest.cpp  ServieUdpTest.h  cjson-interface.h  protocal_vd_stream.cpp  protocal_vd_stream.h
examples/websocket-test/: CMakeLists.txt  main.cpp  readMe.md  test.lua
extern_project/lua-5.2.0/src/: CMakeLists.txt  lua  luac
imp/: CMakeLists.txt  changelog-format.cpp  changelog-format.h  commandlineTool.cpp  commandlineTool.h  debug-helper.cpp  debug-helper.h  dns-solver.cpp  dns-solver.h  localCommandlineTool.cpp  localCommandlineTool.h  udp-echo-server.cpp  udp-echo-server.h  uevent_monitor.cpp  uevent_monitor.h
imp/bluez-looptest/: at-device-task.cpp  at-device-task.h  bluez-test-task.cpp  bluez-test-task.h
imp/can-utils/: can-serial-proxy.cpp  can-serial-proxy.h  can-type-def.h  can-util-socket.cpp  can-util-socket.h  can-util.cpp  can-util.h
imp/common/: hid_utils.cpp  hid_utils.h  iutils.cpp  iutils.h  serial_utils.cpp  serial_utils.h
imp/debugger/: timer-escaper.h
imp/device-discover/: device-discover.cpp  device-discover.h
imp/device-update/: Protocol.cpp  Protocol.h  device_updater.cpp  device_updater.h  update-file.cpp  update-file.h  update-type-def.cpp  update-type-def.h
imp/logo-progress/: logo-progress-helper.md  logo-progress.cpp  logo-progress.h
imp/network/: icache_buffer_stream.cpp  icache_buffer_stream.h  icache_buffer_udp.cpp  icache_buffer_udp.h  itcp-server.cpp  itcp-server.h  protocal-normal.cpp  protocal-normal.h  protocal_stream.cpp  protocal_stream.h  tcp-connection-manager.cpp  tcp-connection-manager.h
imp/network/base/: icache_buffer.cpp  icache_buffer.h  protocal-base.cpp  protocal-base.h
imp/network/websocket/: protocal-http.cpp  protocal-http.h  protocal_websocket.cpp  protocal_websocket.h  websocket_api_base.cpp  websocket_api_base.h  websocket_connection_helper.cpp  websocket_connection_helper.h
imp/utils/: common_utils.cpp  common_utils.h
log/: CMakeLists.txt  aimy-log.cpp  aimy-log.h
sub_project/daemon-service/: README.md
sub_project/daemon-service/daemon-configs/: S99monitor  daemonConfig.ini
sub_project/daemon-service/daemon-configs/conf.d/: bootinfo.conf  diskinfo.conf  memoryinfo.conf  networkinfo.conf  videooutputinfo.conf
sub_project/daemon-service/daemon-configs/shellScript/: collectProcessList.sh  init.sh  memoryMonitor.sh
sub_project/daemon-service/src/: CMakeLists.txt  commandlineTool.h  daemon-instance.h  main.cpp  network-log.cpp
sub_projects/daemon-service/daemon-configs/conf.d/: discover-service.conf  process_adbd.conf  processlistinfo.conf  supervisordinfo.conf
sub_projects/daemon-service/daemon-configs/shellScript/: collectBootInfo.sh  diskMonitor.sh  hdmiMonitor.sh  networkMonitor.sh  processMonitor.sh  supervisordMonitor.sh
sub_projects/daemon-service/src/: commandlineTool.cpp  daemon-instance.cpp  network-log.h
