if(${CMAKE_SYSTEM_NAME} MATCHES "Android")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
    list(APPEND LIBS ${target}_static "-Wl,-Bstatic")
    message(STATUS "compile android examples")
else()
    add_link_options(-rdynamic)
    list(APPEND LIBS ${target}_static pthread)
endif()
add_subdirectory("device-discover")
add_subdirectory("can-test")
add_subdirectory("commandlineTool")
add_subdirectory("dns-test")
add_subdirectory("log-format-tool")
add_subdirectory("object-test")
add_subdirectory("udp-test")
add_subdirectory("tcp-test")
if(COMPILE_SDL_MODE)
    add_subdirectory("logo-progress")
    add_subdirectory("record-example")
endif()
add_subdirectory("bluez-looptest")
add_subdirectory("virtual-device")
add_subdirectory("virtual-device-test")
