if(${CMAKE_SYSTEM_NAME} MATCHES "Android")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
    list(APPEND LIBS ${target}_static "-Wl,-Bstatic")
    message(STATUS "compile android examples")
else()
    add_link_options(-rdynamic)
    list(APPEND LIBS ${target}_static pthread)
endif()
add_subdirectory("device-discover")
add_subdirectory("can-test")
add_subdirectory("commandlineTool")
add_subdirectory("dns-test")
add_subdirectory("log-format-tool")
add_subdirectory("object-test")
add_subdirectory("udp-test")
add_subdirectory("tcp-test")
if(COMPILE_SDL_MODE)
    add_subdirectory("logo-progress")
    add_subdirectory("record-example")
endif()
add_subdirectory("bluez-looptest")
add_subdirectory("device_updater")
add_subdirectory("uevent-monitor")
add_subdirectory("serial-test")
add_subdirectory("uband_test")
add_subdirectory("json_format")
add_subdirectory("bus_error_test")
set(COMPILE_GATT_EXAMPLE ON)
find_library(GLIB2_LIB_PATH  glib-2.0 ${CMAKE_LIBRARY_PATH})
if( NOT ${GLIB2_LIB_PATH} STREQUAL "GLIB2_LIB_PATH-NOTFOUND"  )
    MESSAGE(STATUS "found glib-2 module ${GLIB2_LIB_PATH}")
else()
    MESSAGE(STATUS "not found glib-2 module")
    set(COMPILE_GATT_EXAMPLE OFF)
endif()
set(COMPILE_GATT_EXAMPLE ON)
find_library(DBUS1_LIB_PATH  dbus-1 ${CMAKE_LIBRARY_PATH})
if( NOT ${DBUS1_LIB_PATH} STREQUAL "DBUS1_LIB_PATH-NOTFOUND"  )
    MESSAGE(STATUS "found dbus-1 module ${DBUS1_LIB_PATH}")
else()
    MESSAGE(STATUS "not found dbus-1 module")
    set(COMPILE_GATT_EXAMPLE OFF)
endif()

if( $ENV{COMPILER_PREFIX} MATCHES "arm-buildroot-linux-gnueabihf"  )
    MESSAGE(STATUS "disable gatt for arm ")
    set(COMPILE_GATT_EXAMPLE OFF)
endif()
if(COMPILE_GATT_EXAMPLE)
add_subdirectory("gatt-test")
add_subdirectory("gatt")
add_subdirectory("gatt-client")
endif()

