if(${CMAKE_SYSTEM_NAME} MATCHES "Android")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
    list(APPEND LIBS ${target}_static "-Wl,-Bstatic")
    message(STATUS "compile android examples")
else()
    add_link_options(-rdynamic)
    list(APPEND LIBS ${target}_static pthread)
endif()
add_subdirectory("device-discover")
add_subdirectory("can-test")
add_subdirectory("commandlineTool")
add_subdirectory("dns-test")
add_subdirectory("log-format-tool")
add_subdirectory("object-test")
add_subdirectory("udp-test")
add_subdirectory("tcp-test")
if(COMPILE_SDL_MODE)
    add_subdirectory("logo-progress")
    add_subdirectory("record-example")
endif()
add_subdirectory("bluez-looptest")
add_subdirectory("device_updater")
add_subdirectory("uevent-monitor")
add_subdirectory("serial-test")
add_subdirectory("uband_test")
add_subdirectory("json_format")
add_subdirectory("bus_error_test")
if(COMPILE_LUA_EXAMPLE)
find_library(LUA_LIB_PATH  lua ${CMAKE_LIBRARY_PATH})
if( NOT ${LUA_LIB_PATH} STREQUAL "LUA_LIB_PATH-NOTFOUND"  )
    MESSAGE(STATUS "found lua module ${LUA_LIB_PATH}")
    set(COMPILE_LUA_EXAMPLE ON)
else()
    if(EXISTS "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/liblua.a")
        MESSAGE(STATUS "found lua module ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/liblua.a")
        set(COMPILE_LUA_EXAMPLE ON)
        set(LUA_LIB_PATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/liblua.a)
    else()
        MESSAGE(STATUS "not found lua module")
        set(COMPILE_LUA_EXAMPLE OFF)
    endif()

endif()
endif(COMPILE_LUA_EXAMPLE)
if(COMPILE_LUA_EXAMPLE)
    include_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/lua)
    MESSAGE(STATUS "compile lua example")
add_subdirectory("websocket-test")
else()
    MESSAGE(STATUS "not compile lua example")
endif()
set(COMPILE_GATT_EXAMPLE ON)
find_library(GLIB2_LIB_PATH  glib-2.0 ${CMAKE_LIBRARY_PATH})
if( NOT ${GLIB2_LIB_PATH} STREQUAL "GLIB2_LIB_PATH-NOTFOUND"  )
    MESSAGE(STATUS "found glib-2 module ${GLIB2_LIB_PATH}")
else()
    MESSAGE(STATUS "not found glib-2 module")
    set(COMPILE_GATT_EXAMPLE OFF)
endif()
set(COMPILE_GATT_EXAMPLE ON)
find_library(DBUS1_LIB_PATH  dbus-1 ${CMAKE_LIBRARY_PATH})
if( NOT ${DBUS1_LIB_PATH} STREQUAL "DBUS1_LIB_PATH-NOTFOUND"  )
    MESSAGE(STATUS "found dbus-1 module ${DBUS1_LIB_PATH}")
else()
    MESSAGE(STATUS "not found dbus-1 module")
    set(COMPILE_GATT_EXAMPLE OFF)
endif()

if( $ENV{COMPILER_PREFIX} MATCHES "arm-buildroot-linux-gnueabihf"  )
    MESSAGE(STATUS "disable gatt for arm ")
    set(COMPILE_GATT_EXAMPLE OFF)
endif()
if(COMPILE_GATT_EXAMPLE)
add_subdirectory("gatt-test")
add_subdirectory("gatt")
add_subdirectory("gatt-client")
endif()

